F8: bug z-index réglé

--- a/src/main/webapp/css/displayNav.css
+++ b/src/main/webapp/css/displayNav.css
@@ -6,12 +6,14 @@
     margin: 0.5em 0.5em;
     list-style: none;
     line-height: normal;
+    z-index: 2;
 }
 
 .treeviewDiv, .topoDisplayDiv{
     margin: 0;
     padding: 0;
     width:100%;
+    z-index: 2;
 }
 
 .treeview ul {
