--- a/src/main/webapp/css/displaySpot.css
+++ b/src/main/webapp/css/displaySpot.css
@@ -6,7 +6,7 @@
     top: 4em;
     left: 20em;
     margin:1em;
-    z-index: -2;
+    z-index: 0;
 }
 
 #navDiv{
@@ -19,6 +19,7 @@
     box-shadow: 3px 3px 3px #000;
     width: 17em;
     padding: 0.5em;
+    z-index: 2;
 }
 
 .descriptionDiv{
