--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -8,7 +8,7 @@ header{
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 0;
+    z-index: 1;
     height: 2em;
 }
 
