--- a/src/main/webapp/css/popup.css
+++ b/src/main/webapp/css/popup.css
@@ -6,7 +6,6 @@
     min-width: 15em;
     max-width: 50em;
     width: 300%;
-    z-index: 1;
 }
 
 /* The actual popup (appears on top) */
@@ -23,6 +22,7 @@
     bottom: 100%;
     font-size: 0.8em;
     font-weight: lighter;
+    box-shadow: 2px 2px 3px #222222;
 }
 
 .descriptionPopup{
